# ss-sub

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
src/: main.py
src/models/: subscription.py
src/routers/: rules.py  subscription.py
src/services/: fetcher.py  merger.py  scheduler.py  storage.py
static/: app.js  index.html  styles.css
